# explore_dpcgans

./: README.md  bgmm.ipynb  bug.md  inspect_profiling_results.py  performance_optimization.md  profiling_10kobs.txt  pyproject.toml  sample_dpcgans.py  train_sample_dpcgans.py  working-on-snellius.md
docs/: performance-optimization.md  profiling.md  proposal_svi.md  working-on-snellius.md
profiling_output/: nobs_10000_snellius.txt  nobs_10000_snellius_nosampling.txt  nobs_20000_snellius_nosample_batchsize_2000.txt
src/: bgmm.ipynb  helpers.py  sample_dpcgans.py
