[tool.poetry]
name = "explore-dp-cgans"
version = "0.0.1"
description = "Exploring the workings of DP CGANS"
# description = "This package is extended from SDV (https://github.com/sdv-dev/SDV), CTGAN (https://github.com/sdv-dev/CTGAN), and Differential Privacy in GANs (https://github.com/civisanalytics/dpwgan). The author modified the conditional matrix and cost functions to emphasize on the relations between variables. The main changes are in ctgan/synthesizers/ctgan.py ../data_sampler.py ../data_transformer.py"
authors = ["Chang Sun <sunchang0124@gmail.com>", "Flavio Hafner <f.hafner@esciencecenter.nl>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/private-synthetic-data-social-sciences/explore_dpcgans"
keywords = [ "CGAN", "synthetic data", "DP", "Differential Privacy", "GAN" ]
include = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.scripts]
dp-cgans = "dp_cgans.__main__:cli"


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
wheel = "*"
numpy = "1.22.4"
pandas = "1.5.3"
torch = "1.13.1"
scipy = "1.7.3"
rdt= "0.6.4"
scikit-learn = "*"
graphviz = "*"
faker = "9.9.1"
copulas = "0.6.1"
ctgan = "0.5.1"
pyreadstat = "*"
sdv = "0.14.0"
typer = "*"
dp-cgans = { git = "https://github.com/sunchang0124/dp_cgans.git/", rev = "0ed8b5c" }
# the pip version fails b/c of sklearn dependency

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
